docs/0.12/_sources/api/gammapy.spectrum.models.TableModel.rst.txt
TableModel
==========

.. currentmodule:: gammapy.spectrum.models

.. autoclass:: TableModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~TableModel.energy
      ~TableModel.meta
      ~TableModel.norm
      ~TableModel.parameters
      ~TableModel.values

   .. rubric:: Methods Summary

   .. autosummary::

      ~TableModel.__call__
      ~TableModel.copy
      ~TableModel.energy_flux
      ~TableModel.energy_flux_error
      ~TableModel.evaluate
      ~TableModel.evaluate_error
      ~TableModel.from_dict
      ~TableModel.integral
      ~TableModel.integral_error
      ~TableModel.inverse
      ~TableModel.plot
      ~TableModel.plot_error
      ~TableModel.read_fermi_isotropic_model
      ~TableModel.read_xspec_model
      ~TableModel.spectral_index
      ~TableModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: energy
   .. autoattribute:: meta
   .. autoattribute:: norm
   .. autoattribute:: parameters
   .. autoattribute:: values

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: read_fermi_isotropic_model
   .. automethod:: read_xspec_model
   .. automethod:: spectral_index
   .. automethod:: to_dict
